syntax = "proto3";

package server.v1;

option go_package = "server/api/server/v1;v1";

service DirectSendService {
  rpc DirectSend (DirectSendRequest) returns (DirectSendResponse) ;
}

message DirectSendRequest{
  int32 app_id = 1;
  repeated int32 client_id = 2;
  string content = 3;
}

message DirectSendResponse{
}